--- a/portfolio.html
+++ b/portfolio.html
@@ -74,7 +74,7 @@
           <ul class="row list">
             <li class="row-item">
               <a class="link" href="">
-                <img
+                <img class="portfolio-img"
                   src="./images/portfolio/banking_img_1.jpg"
                   alt="Banking App Interface Concept"
                   width="360"
@@ -90,7 +90,7 @@
             </li>
             <li class="row-item">
               <a class="link" href="">
-                <img
+                <img class="portfolio-img"
                   src="./images/portfolio/cashless_img_2.jpg"
                   alt="Cashless Payment"
                   width="360"
@@ -104,7 +104,7 @@
             </li>
             <li class="row-item">
               <a class="link" href="">
-                <img
+                <img class="portfolio-img"
                   src="./images/portfolio/meditation_img_3.jpg"
                   alt="Meditation App"
                   width="360"
@@ -118,7 +118,7 @@
             </li>
             <li class="row-item">
               <a class="link" href="">
-                <img
+                <img class="portfolio-img"
                   src="./images/portfolio/taxi_img_4.jpg"
                   alt="Taxi Service"
                   width="360"
@@ -132,7 +132,7 @@
             </li>
             <li class="row-item">
               <a class="link" href="">
-                <img
+                <img class="portfolio-img"
                   src="./images/portfolio/screen_img_5.jpg"
                   alt="Screen Illustrations"
                   width="360"
@@ -146,7 +146,7 @@
             </li>
             <li class="row-item">
               <a class="link" href="">
-                <img
+                <img class="portfolio-img"
                   src="./images/portfolio/online_img_6.jpg"
                   alt="Online Courses"
                   width="360"
@@ -160,7 +160,7 @@
             </li>
             <li class="row-item">
               <a class="link" href="">
-                <img
+                <img class="portfolio-img"
                   src="./images/portfolio/instagram_img_7.jpg"
                   alt="Instagram Stories Concept"
                   width="360"
@@ -176,7 +176,7 @@
             </li>
             <li class="row-item">
               <a class="link" href="">
-                <img
+                <img class="portfolio-img"
                   src="./images/portfolio/organic_img_8.jpg"
                   alt="Organic Food"
                   width="360"
@@ -190,7 +190,7 @@
             </li>
             <li class="row-item">
               <a class="link" href="">
-                <img
+                <img class="portfolio-img"
                   src="./images/portfolio/fresh_coffee_img_9.jpg"
                   alt="Fresh Coffee"
                   width="360"
@@ -210,7 +210,7 @@
     <footer class="footer-section">
       <div class="container footer">
         <!-- Logo link -->
-        <a class="logo link" href="./index.html"
+        <a class="logo-footer link" href="./index.html"
           >Web<span class="footer-logo-part-two">Studio</span></a
         >
         <!-- Footer text -->
