--- a/index.html
+++ b/index.html
@@ -101,9 +101,10 @@
       <section class="product-image-section">
         <div class="container product-image">
           <h2 class="headline-two">What are we doing</h2>
-          <ul class="product-img list">
+          <ul class="product-img-list list">
             <li class="product-image-item">
               <img
+              class="product-img"
                 src="./images/Rectangle71.jpg"
                 alt="img1"
                 width="360"
@@ -112,6 +113,7 @@
             </li>
             <li class="product-image-item">
               <img
+              class="product-img"
                 src="./images/Rectangle72.jpg"
                 alt="img2"
                 width="360"
@@ -120,6 +122,7 @@
             </li>
             <li class="product-image-item">
               <img
+              class="product-img"
                 src="./images/Rectangle73.jpg"
                 alt="img3"
                 width="360"
@@ -190,7 +193,7 @@
     <footer class="footer-section">
       <div class="container footer">
         <!-- Logo link -->
-        <a class="logo link" href="./index.html"
+        <a class="logo-footer link" href="./index.html"
           >Web<span class="footer-logo-part-two">Studio</span></a
         >
         <!-- Footer text -->
