--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                 height="260"
               />
               <div class="item-container">
-                <h3 class="headline-three">Mark Guerrero</h3>
+                <h3 class="team-title">Mark Guerrero</h3>
                 <p class="team-text">Product Designer</p>
               </div>
             </li>
@@ -157,7 +157,7 @@
                 height="260"
               />
               <div class="item-container">
-                <h3 class="headline-three">Tom Ford</h3>
+                <h3 class="team-title">Tom Ford</h3>
                 <p class="team-text">Frontend Developer</p>
               </div>
             </li>
@@ -169,7 +169,7 @@
                 height="260"
               />
               <div class="item-container">
-                <h3 class="headline-three">Camila Garcia</h3>
+                <h3 class="team-title">Camila Garcia</h3>
                 <p class="team-text">Marketing</p>
               </div>
             </li>
@@ -181,7 +181,7 @@
                 height="260"
               />
               <div class="item-container">
-                <h3 class="headline-three">Daniel Wilson</h3>
+                <h3 class="team-title">Daniel Wilson</h3>
                 <p class="team-text">UI Designer</p>
               </div>
             </li>
