--- a/portfolio.html
+++ b/portfolio.html
@@ -64,11 +64,11 @@
           <h1 class="visually-hidden" hidden>Portfolio</h1>
           <!-- Filter button -->
           <ul class="filter-button list">
-            <li><button class="fltr-btn" type="button">All</button></li>
-            <li><button class="fltr-btn" type="button">Web Site</button></li>
-            <li><button class="fltr-btn" type="button">App</button></li>
-            <li><button class="fltr-btn" type="button">Design</button></li>
-            <li><button class="fltr-btn" type="button">Marketing</button></li>
+            <li><button class="all-btn" type="button">All</button></li>
+            <li><button class="all-btn" type="button">Web Site</button></li>
+            <li><button class="all-btn" type="button">App</button></li>
+            <li><button class="all-btn" type="button">Design</button></li>
+            <li><button class="all-btn" type="button">Marketing</button></li>
           </ul>
           <!-- Filter button results -->
           <ul class="row list">
